Normalize wheel radius bounds